--- a/manifests/quarkus-secret.yaml
+++ b/manifests/quarkus-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-datasource
 stringData:
   datasource.properties: |-
-     quarkus.datasource.camel.jdbc.url=jdbc:mysql://messagedb.kamel-demo.svc:3306/messagedb
+     quarkus.datasource.camel.jdbc.url=jdbc:mysql://messagedb:3306/messagedb
      quarkus.datasource.camel.username=messagedb
      quarkus.datasource.camel.password=Demo1234
      quarkus.datasource.camel.db-kind=mysql
